# cook

./: CMakeLists.txt  LICENSE  Makefile  README.md  includes.hpp  interpreter.d  lexer.cpp  lexer.d  lexer.hpp  main  main.cpp  main.d  parser.cpp  parser.d  parser.hpp  replit.nix
kook/: CMakeLists.txt  interpreter.cpp  interpreter.hpp  lexer.cpp  lexer.hpp  main.cpp  opcodes.hpp  parser.cpp  parser.hpp
